# Method-Gomori

./: .gitingore  CMakeLists.txt  README.md  for_gomori.py  new_result.txt  result.py  result.txt
include/: generator_zlp.h  gomori.h  good_funcs.h  prepare_simplex.h  simplex_method.h
src/: generator_zlp.cpp  gomori.cpp  good_funcs.cpp  lab1.cpp  main.cpp  mvag.c  mytests.cpp  old.txt  prepare_simplex.cpp  simplex_method.cpp
